[gd_scene load_steps=6 format=2]

[ext_resource path="res://script/aimed_carrot.gd" type="Script" id=4]
[ext_resource path="res://texture/carrot/carrot_new1.png" type="Texture" id=6]
[ext_resource path="res://texture/carrot/carrot_new_smush.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 7 ) ],
"loop": false,
"name": "new_smush",
"speed": 20.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "new_shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.99996, 1.53337 )

[node name="aimed_carrot" type="Area2D"]
collision_layer = 64
collision_mask = 2147483722
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.5 )
frames = SubResource( 1 )
animation = "new_smush"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.03538, 0.0371623 )
scale = Vector2( 0.4, 0.25 )
[connection signal="area_entered" from="." to="." method="_on_aimed_carrot_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_carrot_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
